--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stylus-loader": "^3.0.1",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
+    "vue-circle-choice": "^0.0.5",
     "vue-datepicker": "^1.3.0",
     "vue-hot-reload-api": "^2.0.7",
     "vue-html-loader": "^1.2.2",
